package com.mikaservices.platform.common.enums

enum class NiveauExperience {
    DEBUTANT,
    CONFIRME,
    EXPERT,
    SENIOR
}
