package com.mikaservices.platform.common.enums

enum class NiveauHierarchique {
    DIRECTION,
    CADRE_SUPERIEUR,
    CADRE_MOYEN,
    AGENT_MAITRISE,
    EMPLOYE
}
