package com.mikaservices.platform.common.enums

enum class TypeContrat {
    CDI,
    CDD,
    PRESTATAIRE,
    SOUS_TRAITANT,
    STAGE,
    INTERIM
}
