package com.mikaservices.platform.common.enums

enum class TypeDepartement {
    BUREAU_ETUDE,
    DIRECTION,
    TERRAIN,
    ADMINISTRATION,
    LOGISTIQUE,
    QUALITE,
    HSE,
    FINANCE,
    RH,
    MECANIQUE,
    LABORATOIRE,
    TOPOGRAPHIE
}
