package com.mikaservices.platform.common.enums

enum class TypePermission {
    CREATE,
    READ,
    UPDATE,
    DELETE,
    VALIDATE,
    EXPORT,
    ADMIN
}
