package com.mikaservices.platform.common.enums

enum class TypeSpecialite {
    MACON,
    FERRAILLEUR,
    ELECTRICIEN,
    PLOMBIER,
    CARRELEUR,
    PEINTRE,
    MENUISIER,
    SOUDEUR,
    CONDUCTEUR_ENGINS,
    TOPOGRAPHE,
    LABORANTIN,
    MECANICIEN,
    AUTRE
}
